# AshBF

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  CODESTYLE.md  COMPILER.md  JS.md  LICENSE.md  OPTIMIZATIONS.md  README.md  VM.md  main.cpp
bf/: bcinterpreter.cpp  compiler.cpp
sample/: mandelbrot.bf
src/: cli.cpp  cli.hpp  commandline.cpp  commonpp.hpp  fileutils.cpp  fileutils.hpp  logger.cpp  logger.hpp  main.cpp  pch.hpp  vecutils.hpp  vecutils.tpp  wasm.cpp
src/bf/: bcinterpreter.cpp  bcinterpreter.tpp  bf.cpp  bf.hpp  compiler.cpp  compiler.hpp  disasm.cpp  disasm.hpp  il.cpp  il.hpp  linker.cpp  logger.cpp  logger.hpp  optimizer.cpp  optimizer.hpp  safeinterpreter.cpp  safeinterpreter.hpp  span.hpp  vecutils.hpp  vm.cpp  vm.hpp
src/bf/codegen/: asm-x86-64.cpp  asm-x86-64.hpp  c.cpp  c.hpp  codegen.hpp  llvm.cpp  llvm.hpp  smol.cpp  smol.hpp
src/js/: library.js  postjs.js
